docs: Sample of edge initiated replicated event sourcing (#1083)